--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -1,8 +1,11 @@
 #compose_buttons {
     text-align: right;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
     .new_message_button {
-        padding-top: 1.1em;
+        margin-left: 4px;
 
         .button.small {
             font-size: 1em;
@@ -16,10 +19,6 @@
                 font-weight: 400;
                 line-height: 1em;
             }
-
-            @media (width >= $sm_min) {
-                display: none;
-            }
         }
 
         .message-control-link {
@@ -29,16 +28,36 @@
         .alert-draft {
             font-size: 14px;
             color: hsl(170, 48%, 54%);
-            padding: 3px 12px;
+            padding: 0 12px;
             font-weight: 400;
             display: none;
         }
+    }
 
+    .reply_button_container {
+        flex: 1;
+        min-width: 0;
+        margin-left: 0;
+
+        .compose_reply_button {
+            width: 100%;
+            text-align: left;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+    }
+
+    .mobile_button_container {
+        @media (width >= $sm_min) {
+            display: none;
+        }
+    }
+
+    .stream_button_container,
+    .private_button_container {
         @media (width < $sm_min) {
-            .compose_stream_button,
-            .compose_private_button {
-                display: none;
-            }
+            display: none;
         }
     }
 }
@@ -47,7 +66,7 @@
     border-top: 1px solid hsla(0, 0%, 0%, 0.07);
     transition: background-color 200ms linear;
 
-    padding: 8px 10px 8px 10px;
+    padding: 4px 4px 8px 4px;
     margin-left: 250px;
     margin-right: 250px;
     position: relative;
